--- a/electrostore-lambdas/user/package.json
+++ b/electrostore-lambdas/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcial3ercorte",
+  "name": "user",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,14 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.812.0",
-    "@aws-sdk/lib-dynamodb": "^3.814.0",
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.9.0",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "bcryptjs": "^3.0.2"
   }
-  
 }
